--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,10 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.1.0/list.min.js"></script>
       <script src="assets/js/main.js"></script>
       <script src="assets/js/favorite-things.js"></script>
+    {% else if == "/" %}
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
+      <script src="assets/js/main.js"></script>
+      <script src="assets/js/home.js"></script>
     {% else %}
       <script src="assets/js/main.js"></script>
     {% endif %}
