--- a/_scss/about.scss
+++ b/_scss/about.scss
@@ -12,6 +12,7 @@
   padding: 0;
   .about-bio {
     display: flex;
+    margin: rem(40px) 0;
     @include media(medium) {
       flex-direction: column;
     }
@@ -24,6 +25,35 @@
       }
       @include media(small) {
         width: 80%;
+      }
+      .hex-outer {
+        position: relative;
+        top: 0;
+        left: 0;
+        max-width: 100%;
+        width: 200px;
+      }
+      .hex-outer:before {
+        content: '';
+        display: block;
+        padding-bottom: 115%;
+      }
+      .hex-outer img {
+        position: relative;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        width: 115%;
+      }
+      .hex-inner {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        transform: rotate(240deg);
+        backface-visibility: hidden;
       }
     }
   }
@@ -59,6 +89,7 @@
   padding-top: 40px;
   border-top: 2px solid $blue;
 }
+
 .spotify-svg-wrapper {
   overflow: hidden;
   .spotify-svg {
