update about avatar, nav tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <p class="footer-text">Thanks for reading. Have a nice <span class="date"></span></p>
+  <p class="footer-text">Thanks for visiting. Have a nice <span class="date"></span></p>
 </footer>
 
 {% if page.bannerOffset %}
