--- a/_scss/favorite-things.scss
+++ b/_scss/favorite-things.scss
@@ -59,7 +59,7 @@
           top: -20px;
           padding: 0 10px;
           &:checked + span {
-            color: white;
+            color: $white;
             background-color: $darkblue;
           }
         }
