--- a/_scss/variables.scss
+++ b/_scss/variables.scss
@@ -28,6 +28,7 @@ $lightpeach: #FFECC8;
 $lightyellow: #FFF98B;
 $lightgreen: #CBFFC3;
 $lightblue: #C4F3FF;
+$lightnavy: #E2DEFF;
 $lightpurple: #E3D8FE;
 
 
