--- a/_scss/hiit.scss
+++ b/_scss/hiit.scss
@@ -77,7 +77,7 @@ body {
     display: inline-block;
     font-size: 60px;
     line-height: 200px;
-    color: white;
+    color: #fff;
   }
   .countdown-svg-wrapper {
     position: absolute;
@@ -98,7 +98,7 @@ body {
         stroke-dasharray: 575px;
         stroke-dashoffset: 0px;
         stroke-width: 20px;
-        stroke: white;
+        stroke: #fff;
         fill: none;
         animation: countdown30 30s linear forwards;
       }
@@ -128,5 +128,5 @@ body {
   --scaler: 10vw;
   font-size: clamp( var(--minFontSize), var(--scaler), var(--maxFontSize) );
   line-height: 0.9;
-  color: white;
+  color: #fff;
 }
