homepage text animation

--- a/_scss/variables.scss
+++ b/_scss/variables.scss
@@ -20,7 +20,7 @@ $verydarkblue: darken($blue, 65%); // #060034
 $darkbluegray: #86858f;
 $bluegray: #b9b7c7;
 $lightbluegray: #f1f0fa;
-$white: #fff;
+$white: #fafafa;
 
 $lightred: #FFA497;
 $lightorange: #FFC798;
