--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
       <script src="assets/js/favorite-things.js"></script>
     {% else if == "/" %}
       <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
       <script src="assets/js/main.js"></script>
       <script src="assets/js/home.js"></script>
     {% else %}
