--- a/_scss/home.scss
+++ b/_scss/home.scss
@@ -1,46 +1,198 @@
 // home
 
 .home-intro {
-  max-width: 940px;
-  height: 0;
+  width: 100%;
   padding-bottom: rem(20px);
   transition: all 1s ease;
-  overflow: hidden;
-  animation: introSlide 1.5s forwards, bottomBorder 2s forwards;
-  -webkit-animation: introSlide 1.5s forwards, bottomBorder 2s forwards;
-  -moz-animation: introSlide 1.5s forwards, bottomBorder 2s forwards;
-  -o-animation: introSlide 1.5s forwards, bottomBorder 2s forwards;
   .home-intro-text {
     font-family: $serif-font-stack;
-    font-size: 2.75rem;
     font-weight: 600;
     line-height: 1.4;
     position: relative;
     z-index: 2;
-    span {
-      position: relative;
-      &.word {
-        white-space: nowrap;
-      }
-      &.char {
-        &::after {
-          content: '';
-          position: absolute;
-          z-index: -1;
-          top: 60%;
-          left: 50%;
-          transform: translate(-50%,-50%) rotate(45deg);
-          display: inline;
-          width: 0;
-          height: 0;
-          background: transparent;
-          border-radius: 500px;
-          transition: height 0.25s ease;
+    &.home-intro-text__small-mobile {
+      display: none;
+      font-size: rem(16px);
+        .reveal-line {
+          height: 28px;
+          .reveal-text {
+            top: 2px;
+          }
+        }
+    }
+    &.home-intro-text__large-mobile {
+      display: block;
+      font-size: rem(18px);
+      .reveal-line {
+        height: 32px;
+        .reveal-text {
+          top: 2px;
         }
       }
     }
-    .home-intro-link {
-      margin-right: -8px;
+    &.home-intro-text__small-tablet {
+      display: none;
+      font-size: rem(24px);
+      .reveal-line {
+        height: 38px;
+        .reveal-text {
+          top: 0;
+        }
+      }
+    }
+    &.home-intro-text__large-tablet {
+      display: none;
+      font-size: rem(32px);
+      .reveal-line {
+        height: 48px;
+      }
+    }
+    &.home-intro-text__small-desktop {
+      display: none;
+      font-size: rem(28px);
+      .reveal-line {
+        height: 44px;
+      }
+    }
+    &.home-intro-text__large-desktop {
+      display: none;
+      font-size: rem(44px);
+      .reveal-line {
+        height: 60px;
+      }
+    }
+    // small mobile
+    @media (max-width: 380px) {
+      &.home-intro-text__small-mobile {
+        display: block;
+      }
+      &.home-intro-text__large-mobile {
+        display: none;
+      }
+      &.home-intro-text__small-tablet {
+        display: none;
+      }
+      &.home-intro-text__large-tablet {
+        display: none;
+      }
+      &.home-intro-text__small-desktop {
+        display: none;
+      }
+      &.home-intro-text__large-desktop {
+        display: none;
+      }
+    }
+    // small tablet
+    @media (min-width: 500px) {
+      &.home-intro-text__small-mobile {
+        display: none;
+      }
+      &.home-intro-text__large-mobile {
+        display: none;
+      }
+      &.home-intro-text__small-tablet {
+        display: block;
+      }
+      &.home-intro-text__large-tablet {
+        display: none;
+      }
+      &.home-intro-text__small-desktop {
+        display: none;
+      }
+      &.home-intro-text__large-desktop {
+        display: none;
+      }
+    }
+    // large tablet
+    @media (min-width: 680px) {
+      &.home-intro-text__small-mobile {
+        display: none;
+      }
+      &.home-intro-text__large-mobile {
+        display: none;
+      }
+      &.home-intro-text__small-tablet {
+        display: none;
+      }
+      &.home-intro-text__large-tablet {
+        display: block;
+      }
+      &.home-intro-text__small-desktop {
+        display: none;
+      }
+      &.home-intro-text__large-desktop {
+        display: none;
+      }
+    }
+    // small desktop
+    @media (min-width: 769px) {
+      &.home-intro-text__small-mobile {
+        display: none;
+      }
+      &.home-intro-text__large-mobile {
+        display: none;
+      }
+      &.home-intro-text__small-tablet {
+        display: none;
+      }
+      &.home-intro-text__large-tablet {
+        display: none;
+      }
+      &.home-intro-text__small-desktop {
+        display: block;
+      }
+      &.home-intro-text__large-desktop {
+        display: none;
+      }
+    }
+    // large desktop
+    @media (min-width: 1200px) {
+      &.home-intro-text__small-mobile {
+        display: none;
+      }
+      &.home-intro-text__large-mobile {
+        display: none;
+      }
+      &.home-intro-text__small-tablet {
+        display: none;
+      }
+      &.home-intro-text__large-tablet {
+        display: none;
+      }
+      &.home-intro-text__small-desktop {
+        display: none;
+      }
+      &.home-intro-text__large-desktop {
+        display: block;
+      }
+    }
+    .reveal-line {
+      display: block;
+      position: relative;
+      overflow: hidden;
+      margin: 0;
+      &.loaded {
+        overflow: visible;
+      }
+      .reveal-text {
+        position: absolute;
+        top: -4px;
+        z-index: 200;
+        visibility: hidden;
+      }
+    }
+    .home-intro-link__mobile {
+      font-style: italic;
+      color: $blue;
+      transition: all 0.2s ease;
+      &:hover {
+        color: $darkblue;
+        background: $aqua;
+        text-decoration: none;
+      }
+    }
+    .home-intro-link__desktop {
+      margin-right: -4px;
       font-style: italic;
       color: $blue;
       &:hover {
@@ -51,39 +203,81 @@
       &.mouseover {
         .char {
           &.medium-less-75::after {
-            width: 26px;
-            height: 70px;
+            width: 20px;
+            height: 45px;
             background: $lightnavy;
           }
           &.medium-bn-75-150::after {
-            width: 24px;
-            height: 65px;
+            width: 18px;
+            height: 40px;
             background: $lightblue;
           }
           &.medium-bn-150-225::after {
-            width: 22px;
-            height: 60px;
+            width: 16px;
+            height: 35px;
             background: $lightgreen;
           }
           &.medium-bn-225-300::after {
-            width: 20px;
-            height: 55px;
+            width: 14px;
+            height: 30px;
             background: $lightyellow;
           }
           &.medium-more-300::after {
-            width: 18px;
-            height: 50px;
+            width: 12px;
+            height: 25px;
             background: $lightpeach;
+          }
+          @media (min-width: 1200px) {
+            &.medium-less-75::after {
+              width: 26px;
+              height: 70px;
+              background: $lightnavy;
+            }
+            &.medium-bn-75-150::after {
+              width: 24px;
+              height: 65px;
+              background: $lightblue;
+            }
+            &.medium-bn-150-225::after {
+              width: 22px;
+              height: 60px;
+              background: $lightgreen;
+            }
+            &.medium-bn-225-300::after {
+              width: 20px;
+              height: 55px;
+              background: $lightyellow;
+            }
+            &.medium-more-300::after {
+              width: 18px;
+              height: 50px;
+              background: $lightpeach;
+            }
           }
         }
       }
-    }
-  }
-  @include media(medium) {
-    display: block;
-    width: 100%;
-    .home-intro-text {
-      font-size: 2rem;
+      span {
+        position: relative;
+        &.word {
+          white-space: nowrap;
+        }
+        &.char {
+          &::after {
+            content: '';
+            position: absolute;
+            z-index: -1;
+            top: 60%;
+            left: 50%;
+            transform: translate(-50%,-50%) rotate(45deg);
+            display: inline;
+            width: 0;
+            height: 0;
+            background: transparent;
+            border-radius: 500px;
+            transition: height 0.25s ease;
+          }
+        }
+      }
     }
   }
 }
@@ -92,54 +286,4 @@
   position: relative;
   bottom: 2px;
   font-size: 14px;
-}
-
-@keyframes bottomBorder {
-  0% {
-    border-bottom: 1px solid $bluegray;
-  }
-  100% {
-    border-bottom: 1px solid transparent;
-  }
-}
-
-@keyframes introSlide {
-  0% {
-    max-height: 0;
-    height: auto;
-  }
-  100% {
-    max-height: 600px;
-    height: auto;
-  }
-}
-@-webkit-keyframes introSlide {
-  0% {
-    max-height: 0;
-    height: auto;
-  }
-  100% {
-    max-height: 600px;
-    height: auto;
-  }
-}
-@-moz-keyframes introSlide {
-  0% {
-    max-height: 0;
-    height: auto;
-  }
-  100% {
-    max-height: 600px;
-    height: auto;
-  }
-}
-@-o-keyframes introSlide {
-  0% {
-    max-height: 0;
-    height: auto;
-  }
-  100% {
-    max-height: 600px;
-    height: auto;
-  }
 }
