mobile nav tweaks

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,7 +4,7 @@
     <nav class="desktop-menu">
       <ul id="menu" class="nav-ul">
         <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="/">Work <span class="nav-coming-soon">/ coming soon</span></a></li>
+        <li class="nav-item"><a class="nav-link" href="/">Work</a></li>
         <br>
         <li class="nav-item"><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener">GitHub</a></li>
         <li class="nav-item"><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener">CodePen</a></li>
@@ -27,13 +27,13 @@
   <nav class="mobile-menu">
     <ul>
       <li><a class="nav-link" href="/about">About</a></li>
-      <li><a class="nav-link" href="/work">Work <span class="nav-coming-soon">/ coming soon</span></a></li>
+      <li><a class="nav-link" href="/">Work</a></li>
       <li class="mobile-social">
         <div class="icons1">
           <span><a class="nav-link" href="https://github.com/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-github"></i></a></span>
           <span><a class="nav-link" href="https://codepen.io/ChrisBup" target="_blank" rel="noopener"><i class="fab fa-codepen"></i></a></span>
           <span><a class="nav-link" href="https://glitch.com/@ChrisBup" target="_blank" rel="noopener"><span class="glitch-icon">
-            <svg class="glitch-svg" version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="255.3px" viewBox="0 0 320 255.3" style="enable-background:new 0 0 320 255.3;" xml:space="preserve">
+            <svg class="glitch-svg" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="320px" height="255.3px" viewBox="0 0 320 255.3" style="enable-background:new 0 0 320 255.3;" xml:space="preserve">
               <g transform="translate(0.000000, 30.000000)">
                 <g transform="translate(0.000000, 101.318171)">
                   <g transform="translate(43.838525, 68.150533) scale(-1, 1) translate(-43.838525, -68.150533) translate(29.338525, 51.285453)">
