--- a/_scss/nav.scss
+++ b/_scss/nav.scss
@@ -213,7 +213,7 @@
       li {
         margin: 1rem 0;
         a {
-          color: $lightblue;
+          color: $white;
           font-weight: 400;
           text-decoration: none;
           &:hover {
